--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -5,4 +5,6 @@
     <string name="savedstickers">Сохраненные стикеры</string>
     <string name="account">Аккаунт</string>
     <string name="vklogin">Войти через ВК</string>
+    <string name="reload">Перезагрузить</string>
+    <string name="loadingerror">При загрузке данных произошла ошибка</string>
 </resources>
