--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="retrylogin">Retry login</string>
     <string name="loginfailed">Login with VK account failed</string>
     <string name="vkdialogs">VK Dialogs</string>
+    <string name="reload">Reload</string>
+    <string name="loadingerror">Error loading data</string>
 
 
     <integer name="com_vk_sdk_AppId">6761956</integer>
