--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="reload">Reload</string>
     <string name="loadingerror">Error loading data</string>
     <string name="searchpacks">Search sticker packs</string>
+    <string name="stickerpack">Sticker pack</string>
 
 
     <integer name="com_vk_sdk_AppId">6761956</integer>
