--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="loadingerror">Error loading data</string>
     <string name="searchpacks">Search sticker packs</string>
     <string name="stickerpack">Sticker pack</string>
+    <string name="nosavedpacksfound">No saved packs found</string>
 
 
     <integer name="com_vk_sdk_AppId">6761956</integer>
